--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,13 +1,17 @@
-annotated-types==0.7.0
-anyio==4.10.0
-click==8.2.1
 fastapi==0.116.1
-h11==0.16.0
-idna==3.10
+uvicorn[standard]==0.35.0
+python-multipart==0.0.9
 pydantic==2.11.7
-pydantic_core==2.33.2
-sniffio==1.3.1
+pydantic-settings==2.4.0
+SQLAlchemy==2.0.36
+psycopg2-binary==2.9.9
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+aiofiles==24.1.0
+pandas==2.2.2
+duckdb==1.0.0
+redis==5.0.7
+loguru==0.7.2
+ypy-websocket==0.13.1
+websockets==12.0
 starlette==0.47.2
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-uvicorn==0.35.0
